@@ -5,8 +5,8 @@ import org.springframework.core.io.ByteArrayResource;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -16,25 +16,24 @@ import java.util.logging.Level;
 public class FileUtility {
 
         public static String loadFileAsString(String resource) {
-            try {
-                URL url =  FileUtility.class.getClassLoader().getResource(resource);
-                if(url != null){
-                    return new String(Files.readAllBytes(Paths.get(url.toURI())));
-                }
-            }catch (IOException | URISyntaxException e) {
-                log.log(Level.WARNING, "Resource not found");
+            try (InputStream inputStream = ClassLoader.getSystemResourceAsStream(resource)) {
+                return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            } catch (IOException e) {
+                log.log(Level.SEVERE, e.getMessage());
             }
             return "";
         }
 
     public static ByteArrayResource getFile(String resource) throws IOException {
+        ByteArrayResource byteArrayResource;
         try {
             File file = new File(resource);
             Path path = Paths.get(file.getAbsolutePath());
-            return new ByteArrayResource(Files.readAllBytes(path));
+            byteArrayResource = new ByteArrayResource(Files.readAllBytes(path));
         } catch (Exception e)
         {
             throw new IllegalStateException("Cannot find file " + resource);
         }
+        return  byteArrayResource;
     }
 }
